task-2-secure-cicd/manifests/authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: ledger-api-authz
  namespace: payments
spec:
  selector:
    matchLabels:
      app: ledger-api

  action: ALLOW

  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/payments/sa/ledger-sa
